CostalCloud/force-app/main/default/objects/RFI_Reporting_Markets__c.object
<CustomObject>
    <fields>
        <fullName>Division_Admin_Kitchen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division Admin Kitchen</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFI_Reporting_Markets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFI_Markets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division_Director_Kitchen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division Director Kitchen</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFI_Reporting_Markets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFI_Reporting_Markets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>TCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Manager_Core_ID_18__c</fullName>
        <formula>Field_Manager__r.Case_Safe_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Manager (Core) ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Manager_Kitchen_ID_18__c</fullName>
        <formula>Field_Manager_Kitchen__r.Case_Safe_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Manager (Kitchen) ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Manager_Kitchen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Manager Kitchen</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFI_Reporting_Markets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Manager_User_ID_formula__c</fullName>
        <formula>Field_Manager__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Manager User ID (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFI_Markets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IntacctIntegrationID__c</fullName>
        <formula>&quot;S&quot; &amp;  CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IntacctIntegrationID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Name_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Market Name Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Kitchens</fullName>
                </value>
                <value>
                    <fullName>TCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Division__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Desert Mountain</fullName>
                </value>
                <value>
                    <fullName>Gulf Coast</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>Northeast</fullName>
                </value>
                <value>
                    <fullName>Northern Plains</fullName>
                </value>
                <value>
                    <fullName>Pacific Mountain</fullName>
                </value>
                <value>
                    <fullName>South Atlantic</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>Southern California</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>NIS Midwest</fullName>
                </value>
                <value>
                    <fullName>TCS - Southern Desert</fullName>
                </value>
                <value>
                    <fullName>TCS - Northern California</fullName>
                </value>
                <value>
                    <fullName>TCS - Pacific Northwest</fullName>
                </value>
                <value>
                    <fullName>TCS - Central</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>TCS Corporate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFI_Reporting_Markets2_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RFI_Markets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Market_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Market ID(18)</label>
        <type>Text</type>
    </fields>
    <label>RFI Reporting Market</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Region__c</columns>
        <columns>Division__c</columns>
        <columns>Division_Director__c</columns>
        <columns>Division_Admin__c</columns>
        <columns>Regional_Manager__c</columns>
        <columns>Regional_Admin__c</columns>
        <columns>Field_Manager__c</columns>
        <columns>Field_Manager_Kitchen__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Core_Markets</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Division__c</columns>
        <columns>Division_Director__c</columns>
        <columns>Division_Admin__c</columns>
        <columns>Regional_Manager__c</columns>
        <columns>Regional_Admin__c</columns>
        <columns>Field_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>equals</operation>
            <value>Core</value>
        </filters>
        <label>Core Markets</label>
    </listViews>
    <listViews>
        <fullName>Kitchen_Markets</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Program__c</columns>
        <columns>Field_Manager_Kitchen__c</columns>
        <columns>Division_Admin_Kitchen__c</columns>
        <columns>Division_Director_Kitchen__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>includes</operation>
            <value>Kitchens</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>RFI_Reporting_Markets__c.Standard</value>
        </filters>
        <label>Kitchen Markets</label>
    </listViews>
    <listViews>
        <fullName>TCS_Markets</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>Region__c</columns>
        <columns>Field_Manager__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>includes</operation>
            <value>TCS</value>
        </filters>
        <label>TCS Markets</label>
    </listViews>
    <nameField>
        <label>RFI Reporting Market</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFI Reporting Markets</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Primarily HD reporting markets for Core and Kitchens</description>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCS</fullName>
        <active>true</active>
        <label>TCS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>