CostalCloud/force-app/main/default/objects/RFI_Reporting_Markets__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Region__c</columns>
    <columns>Division__c</columns>
    <columns>Division_Director__c</columns>
    <columns>Division_Admin__c</columns>
    <columns>Regional_Manager__c</columns>
    <columns>Regional_Admin__c</columns>
    <columns>Field_Manager__c</columns>
    <columns>Field_Manager_Kitchen__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>