CostalCloud/force-app/main/default/objects/RFI_Reporting_Markets__c/listViews/Core_Markets.listView-meta.xml
<ListView>
    <fullName>Core_Markets</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Division__c</columns>
    <columns>Division_Director__c</columns>
    <columns>Division_Admin__c</columns>
    <columns>Regional_Manager__c</columns>
    <columns>Regional_Admin__c</columns>
    <columns>Field_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Core</value>
    </filters>
    <label>Core Markets</label>
</ListView>