CostalCloud/force-app/main/default/objects/RFI_Reporting_Markets__c/listViews/TCS_Markets.listView-meta.xml
<ListView>
    <fullName>TCS_Markets</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Region__c</columns>
    <columns>Field_Manager__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>includes</operation>
        <value>TCS</value>
    </filters>
    <label>TCS Markets</label>
</ListView>